--- a/src/R/pcgrr/NAMESPACE
+++ b/src/R/pcgrr/NAMESPACE
@@ -80,4 +80,6 @@ export(mutation_context)
 export(init_pcg_report)
 export(update_pcg_report)
 
+export(acmg_evidence_codes)
+
 importFrom(magrittr,"%>%")
