--- a/install_no_docker/conda_pkg/pcgr_dockerized/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr_dockerized/meta.yaml
@@ -13,10 +13,10 @@ build:
 
 requirements:
   build:
-    - python
+    - python >=3.7.3
     - toml
   run:
-    - python
+    - python >=3.7.3
     - toml
     - gdown
 
