--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -88,7 +88,7 @@ requirements:
     #
     # Perl (for VEP)
     - perl-bioperl
-    - ensembl-vep>=94
+    - ensembl-vep==96.3
     #
     # PCGR: R packages
     - r-base
