Use gdown.pl instead of python version which stopped working

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,9 @@ install:
   - conda install --use-local ${PACKAGE_NAME}_dockerized
   # Download the data bundle (usable for both version)
   - gdown https://drive.google.com/uc?id=1TdYagetk-l__aYBsaZJHJvYFStDnIEcq -O - | tar xzf - # grch37
+#  - wget https://raw.githubusercontent.com/circulosmeos/gdown.pl/master/gdown.pl
+#  - perl gdown.pl "https://drive.google.com/uc?id=17DUuy4Z_zid6YIvT8SSYqVzrpzZcoS1i" grch37.tar.gz
+#  - tar -xzf grch37.tar.gz  # will extract into ./data/grch37/
 
 script:
   # Dockerized installation:
