--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,7 @@ install:
   # Download the data bundle (usable for both version)
   - gdown https://drive.google.com/uc?id=1TdYagetk-l__aYBsaZJHJvYFStDnIEcq -O - | tar xzf - # grch37
 #  - wget https://raw.githubusercontent.com/circulosmeos/gdown.pl/master/gdown.pl
-#  - perl gdown.pl "https://drive.google.com/uc?id=17DUuy4Z_zid6YIvT8SSYqVzrpzZcoS1i" grch37.tar.gz
-#  - tar -xzf grch37.tar.gz  # will extract into ./data/grch37/
+#  - perl gdown.pl "https://drive.google.com/uc?id=17DUuy4Z_zid6YIvT8SSYqVzrpzZcoS1i" grch37.tar.gz && tar -xzf grch37.tar.gz  # will extract into ./data/grch37/
 
 script:
   # Dockerized installation:
