--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ install:
   - docker pull sigven/pcgr:dev
   - conda install --use-local ${PACKAGE_NAME}_dockerized
   # Download the data bundle (usable for both version)
-  - gdown https://drive.google.com/open?id=17DUuy4Z_zid6YIvT8SSYqVzrpzZcoS1i -O - | tar xzf - # grch37
+  - gdown https://drive.google.com/uc?id=17DUuy4Z_zid6YIvT8SSYqVzrpzZcoS1i -O - | tar xzf - # grch37
 
 script:
   # Dockerized installation:
@@ -40,7 +40,7 @@ script:
   - pcgr.py
     --input_vcf examples/tumor_sample.COAD.vcf.gz
     --input_cna examples/tumor_sample.COAD.cna.tsv
-    . ./examples grch37 examples/examples_BRCA.toml tumor_sample.COAD
+    . ./examples grch37 examples/examples_BRCA.toml tumor_sample.COAD --tumor_type 10
   #
   # Condarized installation:
   - conda install --use-local ${PACKAGE_NAME}
