Conda pgk: install BSGenome in build.sh

--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -56,8 +56,8 @@ requirements:
     - r-sunburstr         # for CELLector, -c vladsaveliev
     - r-arules            # for CELLector, -c vladsaveliev
     - bioconductor-variantannotation
-    - bioconductor-bsgenome.hsapiens.ucsc.hg19
-    - bioconductor-bsgenome.hsapiens.ucsc.hg38
+#    - bioconductor-bsgenome.hsapiens.ucsc.hg19
+#    - bioconductor-bsgenome.hsapiens.ucsc.hg38
     - bioconductor-genomeinfodb
     - bioconductor-genomicranges  # GenomicRangesS4Vectors
     - bioconductor-regioner
