--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - toml
     #
     # Need R packages build-time to correctly install pcgrr
-    - pandoc==2.3.1
+    - pandoc>=2.3.1
     - bioconductor-biocinstaller
     - libgfortran-ng  # to fix -libgfortran error, thanks @pdiakumis
     - r-purrr>=0.2.4  # to force the one from conda-forge to address this issue https://github.com/jbkunst/highcharter/issues/285
@@ -56,6 +56,7 @@ requirements:
     - r-sunburstr         # for CELLector, -c vladsaveliev
     - r-arules            # for CELLector, -c vladsaveliev
     - bioconductor-variantannotation
+    - r-biocmanager
 #    - bioconductor-bsgenome.hsapiens.ucsc.hg19
 #    - bioconductor-bsgenome.hsapiens.ucsc.hg38
     - bioconductor-genomeinfodb
