--- a/install_no_docker/conda_pkg/pcgr/meta.yaml
+++ b/install_no_docker/conda_pkg/pcgr/meta.yaml
@@ -18,7 +18,7 @@ requirements:
   build:
     - curl
     - unzip
-    - r-base >=3.6.1
+    - r-base
     - r-devtools
     - tar
     - python >=3.7.3
