--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ install:
   - conda install -q python=$TRAVIS_PYTHON_VERSION pip requests conda-build jinja2 anaconda-client
   # Building packages
   - git clone https://github.com/tlatsas/bash-spinner
-  - source bash-spinner/spinner.sh; \
-    start_spinner "Installing PCGR"; \
-    conda build install_no_docker/conda_pkg/${PACKAGE_NAME}; \
-    stop_spinner $?
+  - source bash-spinner/spinner.sh
+  - start_spinner "Installing PCGR"
+  - conda build install_no_docker/conda_pkg/${PACKAGE_NAME}
+  - stop_spinner $?
   - conda build install_no_docker/conda_pkg/${PACKAGE_NAME}_dockerized
   #
   # Dockerized installation:
