--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,7 @@ install:
   - conda config --add channels pcgr --add channels bioconda --add channels conda-forge
   - conda install -q python=$TRAVIS_PYTHON_VERSION pip requests conda-build jinja2 anaconda-client
   # Building packages
-  - git clone https://github.com/tlatsas/bash-spinner
-  - source bash-spinner/spinner.sh
-  - start_spinner "Installing PCGR"
-  - conda build install_no_docker/conda_pkg/${PACKAGE_NAME}
-  - stop_spinner $?
+  - travis_wait conda build install_no_docker/conda_pkg/${PACKAGE_NAME}
   - conda build install_no_docker/conda_pkg/${PACKAGE_NAME}_dockerized
   #
   # Dockerized installation:
